force-app/main/default/objects/Executive_Request__c/Executive_Request__c.object-meta.xml
<CustomObject>
    <label>Executive Request</label>
    <nameField>
        <label>Executive Request Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Executive Requests</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>