force-app/main/default/objects/Executive_Request__c/fields/Additional_Context__c.field-meta.xml
<CustomField>
    <fullName>Additional_Context__c</fullName>
    <inlineHelpText>relevant for Tony before he records the video</inlineHelpText>
    <label>Additional Context</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField> 