force-app/main/default/objects/Executive_Request__c/fields/Business_Type__c.field-meta.xml
<CustomField>
    <fullName>Business_Type__c</fullName>
    <formula>Opportunity__r.Account.Business_Type__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Business Type</label>
    <type>Text</type>
</CustomField>