force-app/main/default/objects/Executive_Request__c/fields/Comment__c.field-meta.xml
<CustomField>
    <fullName>Comment__c</fullName>
    <description>Provide a very specific ask for the sponsor. What do you want them to do as part of the sponsorship?</description>
    <label>The Ask</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>