force-app/main/default/objects/Executive_Request__c/fields/Company_Segment__c.field-meta.xml
<CustomField>
    <fullName>Company_Segment__c</fullName>
    <formula>Opportunity__r.Account.Company_Segment__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Company Segment</label>
    <type>Text</type>
</CustomField>