force-app/main/default/objects/Executive_Request__c/fields/Deadline__c.field-meta.xml
<CustomField>
    <fullName>Deadline__c</fullName>
    <inlineHelpText>date by when you need the CEO to send out the video</inlineHelpText>
    <label>Deadline</label>
    <type>Date</type>
</CustomField> 