force-app/main/default/objects/Executive_Request__c/fields/Executive_Sponsor__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor__c</fullName>
    <label>zzz_Executive Sponsor</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Camilla Gargantini: Chief of Staff to COO</fullName>
            </value>
            <value>
                <fullName>Emmanuel le Blanc: Chief of Staff</fullName>
            </value>
            <value>
                <fullName>Mark Frein: COO</fullName>
            </value>
            <value>
                <fullName>Benjamin Merkley: VP Revenue Operations</fullName>
            </value>
            <value>
                <fullName>Sam Schofield: Chief Revenue Officer</fullName>
            </value>
            <value>
                <fullName>Elise Joy Allen: Senior Director of Account Management</fullName>
            </value>
            <value>
                <fullName>Andrea Di Natale: Analytics and Global Operations</fullName>
            </value>
            <value>
                <fullName>Bianca Burke: People Services Director</fullName>
            </value>
            <value>
                <fullName>Adam Clarke: Snr Director of Sales</fullName>
            </value>
            <value>
                <fullName>Miranda Zolot: General Counsel and Secretary</fullName>
            </value>
            <value>
                <fullName>Sarah Stephens: Senior Managing Counsel</fullName>
            </value>
            <value>
                <fullName>Jeff May: Information Governance and IP Counsel</fullName>
            </value>
            <value>
                <fullName>Kevin Pratt: Managing Counsel</fullName>
            </value>
            <value>
                <fullName>Tony Jamous: Founder and CEO</fullName>
            </value>
            <value>
                <fullName>Luis Franco: VP Operations</fullName>
            </value>
            <value>
                <fullName>Ele Guagnino: Senior Director of Hiring Success</fullName>
            </value>
            <value>
                <fullName>Jack Mardack: Co-Founder</fullName>
            </value>
            <value>
                <fullName>Eryn Marshall: VP of People</fullName>
            </value>
            <value>
                <fullName>Matteo Bordin: Senior Director of Product</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>