force-app/main/default/objects/Executive_Request__c/fields/Executive_Sponsor_lookup__c.field-meta.xml
<CustomField>
    <fullName>Executive_Sponsor_lookup__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Camilla Gargantin - 
Emmanuel le Blanc - 
Mark Frein - 
Ben Merkley - 
Sam Schofield - 
Elise Joy Allen - 
Andrea Di Natale - 
Bianca Burke - 
Adam Clarke - 
Miranda Zolot - 
Sarah Stephens - 
Jeff May - 
Kevin Pratt - 
Tony Jamous - 
Luis Franco - 
Ele Guagnino - 
Jack Mardack - 
Eryn Marshall - 
Matteo Bordin</inlineHelpText>
    <label>Executive Sponsor</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Executive_Requests</relationshipName>
    <type>Lookup</type>
</CustomField>