force-app/main/default/objects/Executive_Request__c/fields/Last_Gong_URL__c.field-meta.xml
<CustomField>
    <fullName>Last_Gong_URL__c</fullName>
    <label>Last Gong URL</label>
    <type>Url</type>
</CustomField>