force-app/main/default/objects/Executive_Request__c/fields/Link_to_Trumpet_Pod__c.field-meta.xml
<CustomField>
    <fullName>Link_to_Trumpet_Pod__c</fullName>
    <label>Link to Trumpet Pod</label>
    <type>Url</type>
</CustomField>