force-app/main/default/objects/Executive_Request__c/fields/Recipient__c.field-meta.xml
<CustomField>
    <fullName>Recipient__c</fullName>
    <inlineHelpText>Name + Linkedin + email</inlineHelpText>
    <label>Recipient</label>
    <length>255</length>
    <type>Text</type>
</CustomField> 