force-app/main/default/objects/Executive_Request__c/fields/Short_Summary__c.field-meta.xml
<CustomField>
    <fullName>Short_Summary__c</fullName>
    <inlineHelpText>Provide background on the account and deal, the personas we are speaking to, and the goal to be achieved through the sponsorship.</inlineHelpText>
    <label>Background and Context</label>
    <length>1000</length>
    <type>LongTextArea</type>
</CustomField>