force-app/main/default/objects/Executive_Request__c/fields/Why_Do_Anything__c.field-meta.xml
<CustomField>
    <fullName>Why_Do_Anything__c</fullName>
    <label>Why Do Anything</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>