force-app/main/default/objects/Executive_Request__c/fields/Why_Now__c.field-meta.xml
<CustomField>
    <fullName>Why_Now__c</fullName>
    <label>Why Now</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>