force-app/main/default/objects/Executive_Request__c/fields/Why_Oyster__c.field-meta.xml
<CustomField>
    <fullName>Why_Oyster__c</fullName>
    <label>Why Oyster</label>
    <length>30000</length>
    <type>LongTextArea</type>
</CustomField>