force-app/main/default/objects/Executive_Request__c/validationRules/Loom_Required_Fields.validationRule-meta.xml
<ValidationRule>
    <fullName>Loom_Required_Fields</fullName>
    <active>true</active>
    <errorConditionFormula>AND(
        INCLUDES(Action_Required__c, "Loom Outreach"),
        OR(
        ISBLANK(Recipient__c),
        ISBLANK(Additional_Context__c),
        ISBLANK(Deadline__c)
        )
        )</errorConditionFormula>
    <errorMessage>When requesting Loom outreach, Recipient, Additional Context, and Deadline fields
        are required.</errorMessage>
</ValidationRule> 